--- a/style.css
+++ b/style.css
@@ -54,17 +54,22 @@ li a {
   display: inline;
   color: #666;
   text-align: center;
-  padding: 18px 20px;
+  padding: 40px 20px;
   text-decoration: none;
 }
 
 li a:hover:not(.active) {
   color: white;
+  border-bottom: 2px solid white;
+  text-decoration: underline;
+  transition-duration: 0.3s;
   /*background-color:rgb(53, 174, 255);*/
 }
 
 li a.active {
   color: white;
+  border-bottom: 2px solid white;
+  /*border-bottom-color: white;*/
  /* background-color: rgb(53, 174, 255);
 */}
 @media all and (max-width: 400px){
@@ -74,30 +79,33 @@ li a.active {
 }
 
   .flexbox > li {
-  flex-basis: 50%;
+  flex-basis: 100%;
 }
 }
 
 .grid{
-  max-width: 800px;
+  max-width: 950px;
   margin: 0 auto;
   display: grid ;
   grid-template-columns: auto auto;
   grid-auto-rows: auto;
   align-items: center;
-  
-  background-color: black;
-  padding: 10px;
+  font-family: Ubuntu;
+  color: white; 
+  /*background-color: black;*/
+  padding: 15px;
 }
 
 .grid > div {
-  border: 1px solid black;
-  background-color: azure;
+  opacity: 0.6;
+  border: 10px solid;
+  background-color:black;
   padding: 40px;
   font-size: 30px;
   text-align: center;
 
 }
 .gitem1{
+  
   grid-column: 1/ span 2;
 }
