--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-
-
-
-
 a{
   float: left;
   display: block;
@@ -20,13 +16,26 @@ header{
   background-size: cover;
   display: flex;
   min-height: 200px;
-  height: auto;
+  height: 600px;
+  filter: brightness(50%);
 }
+.header-links{
+  display: inline-flex;
+  position: absolute;
+  color: white;
+  right: 10px;
+  bottom: 10px;
+  gap: 30px;
+}
+
 h1{
   color: aliceblue;
   margin-top: 50px;
   text-align: center; 
   text-align: center;
+  position: sticky;
+  top: 20px;
+  align-self: flex-start; /*needed for "sticky" to work inside flex*/
 }
 .title{
   display: block;
@@ -44,9 +53,11 @@ h1{
 .content{
   display: grid;
   grid-template-columns: 200px auto;
-  background-color: rgb(120, 145, 221);
+  color: white;
+  background-color: #002b36;
   gap: 40px;
   font-size: 1.2rem;
+  
 }
 .content img{
   border-radius: 50%;
@@ -58,12 +69,13 @@ h1{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
   grid-template-rows: auto;
-  gap: 10px;
   text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .s1{
-  background-color: salmon;
+  color: white;
+  background-color: #002b36;
 }
 .work{
   display: grid;
@@ -75,4 +87,9 @@ h1{
  max-height: 200px; 
  display: block;
  object-fit: contain;
+}
+.work img:hover{
+  transition-duration: 0.3s;
+  filter: brightness(50%);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
